# firecracker

./: Cargo.toml
.buildkite/: pipeline_ab.py  pipeline_perf.py
resources/guest_configs/: microvm-kernel-ci-x86_64-4.14.config  microvm-kernel-ci-x86_64-5.10.config  microvm-kernel-ci-x86_64-6.1.config  pcie.config
resources/seccomp/: aarch64-unknown-linux-musl.json  x86_64-unknown-linux-musl.json
src/acpi/: Cargo.toml
src/acpi/src/: aml.rs  dsdt.rs  fadt.rs  lib.rs  madt.rs  sdt.rs  xsdt.rs
src/devices/: Cargo.toml
src/firecracker/src/: main.rs
src/jailer/src/: env.rs
src/pci/: Cargo.toml
src/pci/src/: configuration.rs  device.rs  lib.rs
src/virtio_gen/src/: virtio_rng.rs
src/vm-device/: Cargo.toml
src/vm-device/src/: lib.rs
src/vm-memory/src/: lib.rs
src/vmm/: Cargo.toml
src/vmm/src/: acpi.rs  builder.rs  lib.rs  persist.rs  resources.rs  rpc_interface.rs
tests/: conftest.py
tests/framework/: ab_test.py  dependencies.txt  microvm.py  utils_iperf.py
tests/host_tools/: memory.py
tests/integration_tests/functional/: test_balloon.py  test_net.py  test_net_config_space.py  test_pci.py  test_rng.py  test_serial_io.py  test_snapshot_basic.py
tests/integration_tests/performance/: test_network_ab.py
tools/: ab_test.py  bindgen.sh  devtool
tools/compare_baselines/: interactive.py  main.py  output_images.py
tools/compare_baselines/utils/: __init__.py  comparator.py  defs.py  fetcher.py
tools/print_baselines/: main.py
tools/print_baselines/utils/: __init__.py  defs.py  git_worktree.py  net_throughput.py  parser.py  plotter.py  types.py
(+68 files in other folders)
